--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,14 +1,13 @@
 <div class="search-container" fxLayout="column" fxLayoutAlign="center center">
-    <div class="search-btn" [hidden]="isSearchField" (click)="toogleSearchField()">
+    <div class="search-btn" [hidden]="isSearchField || searchInputCtrl.value" (click)="toogleSearchField()">
         <mat-icon>search</mat-icon>
     </div>
     <div class="search-input" [hidden]="!isSearchField">
         <mat-form-field appearance="outline">
             <mat-label>Search</mat-label>
-            <input matInput placeholder="Search" [formControl]="seachInput">
-            <mat-icon matSuffix (click)="toogleSearchField()">
+            <input matInput placeholder="Search" [formControl]="searchInputCtrl">
+            <mat-icon matSuffix (click)="clearText()">
                 close</mat-icon>
         </mat-form-field>
     </div>
 </div>
-{{seachInput.value}}
