--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-outline-thick, .mat-form-field-label{
     color: #ff7043 !important;
 }
-
+.mat-toolbar-row, .mat-toolbar-single-row{
+    height: 106px;
+}
+.mat-form-field-wrapper{
+    padding-bottom: 0;
+}
+.mat-card{
+    border: 1px solid #ff704359;
+    background: #ff724905;
+    box-shadow: none !important;
+}
