--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-outline-thick, .mat-form-field-label{
     color: #ff7043 !important;
 }
+.mat-input-element{
+    color: rgba(0,0,0,.87) !important;
+}
 .mat-toolbar-row, .mat-toolbar-single-row{
-    height: 106px;
+    height: 106px;    
+    padding: 0 50px !important;
 }
 .mat-form-field-wrapper{
     padding-bottom: 0;
@@ -16,4 +20,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     border: 1px solid #ff704359;
     background: #ff724905;
     box-shadow: none !important;
+}
+
+.mat-progress-bar-buffer {
+    background-color: #e9d2c5;
+}
+
+.mat-progress-bar-fill::after {
+    background-color: #fe7243;
 }
