Standardized the style sheet

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/constant.scss';
+
 .search-container {
   height: 100%;
   cursor: pointer;
@@ -8,21 +10,21 @@
       padding: 8px 0 0 8px;
       height: 44px;
       width: 44px;
-      color: #fff;
-      background: #ff7043;
+      color: $secondaryColor;
+      background: $primaryColor;
       border-radius: 12px;
       transition: all ease-in-out .3s;
       ;
 
       &:hover {
         border: 1px solid;
-        color: #ff7043;
-        background: #fff;
+        color: $primaryColor;
+        background: $secondaryColor;
         border-radius: 6px;
       }
     }
   }
   .search-input{
-      color: #ff7043;
+      color: $primaryColor;
   }
 }
