--- a/src/app/result/result-item/result-item.component.html
+++ b/src/app/result/result-item/result-item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<mat-card class="result-card" *ngIf="result">
     <mat-card-header>
       <mat-card-title>{{result.name}}</mat-card-title>
       <mat-card-subtitle>{{result.email}}</mat-card-subtitle>
