--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -24,7 +24,13 @@
       }
     }
   }
-  .search-input{
-      color: $primaryColor;
+
+  .search-input {
+    color: $primaryColor;
+
+    button {
+      margin-left: 7px;
+      padding: 3px;
+    }
   }
 }
