End to end testcases added

--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 <ng-template #emptyBlock>
-    <div class="empty-container" fxLayout="row" fxLayoutAlign="center center" *ngIf="initialLoaded">
+    <div class="empty-container" id="noData" fxLayout="row" fxLayoutAlign="center center" *ngIf="initialLoaded">
         <div class="msg">
             <h1>404</h1>
             <label>No Items Found</label>
